# luajit

./: .gitattributes  CMakeLists.txt  Makefile  README.md
cmake/modules/: DetectArchitecture.cmake  DetectFPUApi.cmake  DetectFpuAbi.c
src/: CMakeLists.txt  Makefile  Makefile.dep  lib_io.c  lib_package.c  lib_string.c  lj_alloc.c  lj_api.c  lj_ccallback.c  lj_clib.c  lj_dispatch.h  lj_err.c  lj_fopen.c  lj_load.c  lj_mcode.c  lj_obj.h  lj_prng.c  lj_profile.c  lj_trace.c  lua.h  luajit.c
src/compat53/: math.lua  utf8.lua
src/compat54/: utf8.lua
src/host/cmake/buildvm/: CMakeLists.txt
src/host/cmake/minilua/: CMakeLists.txt
